# pyshearlab

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
examples/: 0000.tif  0001.tif  adjoint.py  benchmark_comprehensive.py  denoising.py  fista_demo.py  test.py  test_all_optimizations.py  test_new_api.py  test_sldshear_vectorized.py  test_square_padding.py  test_torch.py
pyshearlab/: fista_shearlet.py  pySLFilters.py  pySLFilters_torch.py  pySLUtilities.py  pySLUtilities_torch.py  pyShearLab2D.py  pyShearLab2D_torch.py
pyshearlab/test/: test_filters_torch.py  test_fista.py  test_padded_api.py  test_pyshearlab.py  test_rectangular_detailed.py  test_shearlab2d_torch.py  test_utilities_torch.py
